<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F70C0C0C"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/t_editTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#C1BEBE"
        android:ems="10"
        android:hint="@string/enter_time_second"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/clear_button"
        app:layout_constraintEnd_toEndOf="@+id/s_editTextNumberDecimal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/s_editTextNumberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/s_editTextNumberDecimal" />

    <TextView
        android:id="@+id/showResult"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#FFFFFF"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/redTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/redTextView"
        app:layout_constraintTop_toBottomOf="@+id/redTextView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1000:625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/speed_meter" />

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/speed_calculator"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/s_editTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#C1BEBE"
        android:ems="10"
        android:hint="@string/enter_distance_meter"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/t_editTextNumberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/name_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/name_textView"
        app:layout_constraintTop_toBottomOf="@+id/name_textView"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/redTextView"
        app:layout_constraintEnd_toStartOf="@+id/process_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_editTextNumberDecimal" />

    <Button
        android:id="@+id/process_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="@+id/clear_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear_button"
        app:layout_constraintTop_toTopOf="@+id/clear_button" />

    <TextView
        android:id="@+id/redTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/average_speed_km_h"
        android:textColor="#F80404"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/showResult"
        app:layout_constraintEnd_toEndOf="@+id/process_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/clear_button"
        app:layout_constraintTop_toBottomOf="@+id/clear_button" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="64dp"
        android:layout_height="67dp"
        android:layout_marginTop="230dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479"
        app:srcCompat="@drawable/red_cow" />

</androidx.constraintlayout.widget.ConstraintLayout>